--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "patfiredragon",
   "version": "1.0.0",
   "description": "You can use the [editor on GitHub](https://github.com/PatFireDragon/patfiredragon/edit/main/README.md) to maintain and preview the content for your website in Markdown files.",
-  "main": "index.js",
+  "main": "index. js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,13 +18,14 @@
     "url": "https://github.com/PatFireDragon/patfiredragon/issues"
   },
   "homepage": "https://github.com/PatFireDragon/patfiredragon#readme",
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0"
+    "webpack-dev-server": "^4.2.0",
+    "svelte-loader": "^3.1.2"
   }
 }
